--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,3 +1,4 @@
+{% load blog_tags %}
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -9,10 +10,22 @@
     <div id="content">
         {% block content %}
         {% endblock %}
-    </div>
+    </div>  
     <div id="sidebar">
         <h2>My blog</h2>
-        <p>This is my blog.</p>
+        <p>This is my blog. I've written published {% total_posts %} posts so far.</p>
+        <p>This is my blog. I've written total posts  {% total_posts1 %} posts so far.</p>
+        {#<p>This is my blog.</p>#}
+        <h3>Latest posts</h3> {% show_latest_posts 3 %}
+        <h3>Most commented posts</h3>
+            {% get_most_commented_posts as most_commented_posts %}
+                <ul>
+                    {% for post in most_commented_posts %}
+                        <li>
+                            <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
     </div>
 </body>
 </html>
